--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
 body {
   font-family: "Jost", serif;
   font-optical-sizing: auto;
-  overflow-x: hidden;
 }
 
 a {
@@ -197,9 +196,11 @@ ul {
 /* Title */
 
 .title {
+  width: 100%;
   margin: 2rem auto;
   width: fit-content;
   text-align: center;
+  padding: 2rem;
 }
 
 .title h2 {
@@ -324,6 +325,7 @@ ul {
     justify-content: center;
     gap: 4rem;
     margin: 4rem 0;
+    padding: 2rem;
 }
 
 .clientele_container img {
@@ -367,17 +369,16 @@ ul {
 }
 
 .design {
-  width: 100vw;
   background: #c0f8f880;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 50vh;
+  padding: 2rem;
 
 }
 
 .design-container {
-  max-width: 1200px;
   display: flex;
   gap: 2rem;
   margin: 0 auto;
@@ -461,6 +462,7 @@ ul {
 /* Testimonials */
 
 .testimonials_container {
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 50px;
