--- a/style.css
+++ b/style.css
@@ -151,7 +151,8 @@ ul {
   transition: background-color 0.3s;
 }
 
-.hero_container > div {
+.hero_content {
+  width: 100%;
   display: flex;
   gap: 4rem !important;
   margin: 0 auto;
@@ -166,7 +167,7 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 600px;
+  max-width: 600px;
 }
 
 .hero_left h1 {
@@ -193,6 +194,16 @@ ul {
 .hero_left a:hover {
   background-color: #589b6b;
   transition: background-color 0.3s;
+}
+
+.hero_content .hero_right{
+  width: 600px;
+  height: 600px;
+}
+
+.hero_right img {
+  width: 100%;
+  height: 100%;
 }
 
 /* Title */
