--- a/style.css
+++ b/style.css
@@ -359,10 +359,12 @@ ul {
 
 .swiper {
     width: 100%;
-    height: 800px;
+    height: 900px;
 }
 
 .swiper-slide {
+  width: 100%;
+  height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
