--- a/style.css
+++ b/style.css
@@ -388,6 +388,36 @@ ul {
     bottom: -30px; /* Moves dots outside */
 }
 
+.lightbox {
+  display: none;  /* Hidden by default */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox-content {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+}
+
+
+/* DESIGN */
 .design {
   background: #c0f8f880;
   display: flex;
