--- a/style.css
+++ b/style.css
@@ -735,6 +735,7 @@ footer {
       align-items: center;
       width: 100%;
       margin-top: 15%;
+      padding: 2rem;
     }
 
     .hero_content {
