--- a/style.css
+++ b/style.css
@@ -737,6 +737,13 @@ footer {
       width: 100%;
     }
 
+    .nav {
+      position: fixed;
+      background: #ffffffa1;
+      z-index: 40;
+      padding-bottom: 1rem;
+    }
+
     .logo h1 {
       font-size: 22px;
     }
